--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <title>{% block title %}My Site{% endblock %}</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,8 +29,8 @@
         </div>
     </nav>
     <div class="container mt-4">
-        {{ content | safe }}
+        {% block content %}{% endblock %}
     </div>
-    <script src="assets/js/core/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
 </body>
 </html>
