--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,26 @@
 {% block content %}
     <h1>{{ title }}</h1>
     <p>{{ content }}</p>
+
+    <h3>List of Dashboards</h3>
+
+    
+
+    <div class="container-fluid">
+        <div class="row row-cols-4">
+            {% for project in proj_list %}
+                <div class="col">
+                    <div class="card" style="width: 18rem; margin-bottom: 10px;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ project.name }}</h5>
+                            <!-- <h6 class="card-subtitle mb-2 text-muted">...</h6> -->
+                            <p class="card-text">{{project.descr}}</p>
+                            <a href="{{ project.link }}" class="card-link">Link</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock %}
